tab card overflow in sm devices error fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1008,6 +1008,11 @@ body {
     font-size: 13px;
   }
 
+  .tags-container {
+    grid-template-columns: 1fr 1fr;
+
+  }
+
 }
 
 
